@@ -4,6 +4,7 @@ Version 2025.xxxx
 - Implemented: MQTT-AD, added support for Climate action_template/state
 - Implemented: MQTT-AD, added support for IR Blaster (Tuya iH-F8260)
 - Implemented: MQTT-AD, handling battery low boolean sensors
+- Implemented: MQTT-AD, allow publishing messages
 - Implemented: Support for Humidity only graph
 - Fixed: MQTT-AD, fix issue where brightness and RGB command topic are different
 - Fixed: MQTT-AD, preserve select options when updating a device
